{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 156,
  "lineage": "f6fc5761-8e89-29a9-0a19-df26d0f2036b",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "22"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2023-02-18T07:13:29.694-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/mostafa-salah-377213/global/firewalls/ingress-firewall",
            "log_config": [],
            "name": "ingress-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/mostafa-salah-377213/global/networks/vpc-network",
            "priority": 1000,
            "project": "mostafa-salah-377213",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mostafa-salah-377213/global/firewalls/ingress-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "outgress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  ""
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2023-02-18T07:13:29.294-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/mostafa-salah-377213/global/firewalls/egress-firewall",
            "log_config": [],
            "name": "egress-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/mostafa-salah-377213/global/networks/vpc-network",
            "priority": 1000,
            "project": "mostafa-salah-377213",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mostafa-salah-377213/global/firewalls/egress-firewall",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "private-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20230206",
                    "labels": {
                      "my_label": "value"
                    },
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/mostafa-salah-377213/zones/asia-east1-b/disks/private-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/mostafa-salah-377213/zones/asia-east1-b/instances/private-instance",
            "instance_id": "963314953821705684",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-small",
            "metadata_fingerprint": "dj7ojgGZ6Uk=",
            "name": "private-instance",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/mostafa-salah-377213/global/networks/vpc-network",
                "network_ip": "10.0.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/mostafa-salah-377213/regions/asia-east1/subnetworks/managment",
                "subnetwork_project": "mostafa-salah-377213"
              }
            ],
            "project": "mostafa-salah-377213",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/mostafa-salah-377213/zones/asia-east1-b/instances/private-instance",
            "service_account": [
              {
                "email": "service-cluster@mostafa-salah-377213.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "asia-east1-b"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.managment",
            "google_service_account.cluster-service"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/mostafa-salah-377213/global/networks/vpc-network",
            "mtu": 0,
            "name": "vpc-network",
            "project": "mostafa-salah-377213",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mostafa-salah-377213/global/networks/vpc-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "DEFAULT",
                "asn": 64514,
                "keepalive_interval": 20
              }
            ],
            "creation_timestamp": "2023-02-18T07:14:02.877-08:00",
            "encrypted_interconnect_router": false,
            "id": "projects/mostafa-salah-377213/regions/asia-east1/routers/my-router",
            "name": "my-router",
            "network": "https://www.googleapis.com/compute/v1/projects/mostafa-salah-377213/global/networks/vpc-network",
            "project": "mostafa-salah-377213",
            "region": "asia-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mostafa-salah-377213/regions/asia-east1/routers/my-router"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.managment"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "mostafa-salah-377213/asia-east1/my-router/my-router-nat",
            "log_config": [
              {
                "enable": true,
                "filter": "ERRORS_ONLY"
              }
            ],
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "my-router-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "mostafa-salah-377213",
            "region": "asia-east1",
            "router": "my-router",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "https://www.googleapis.com/compute/v1/projects/mostafa-salah-377213/regions/asia-east1/subnetworks/managment",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_router.router",
            "google_compute_subnetwork.managment"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "managment",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-02-18T07:13:31.488-08:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/mostafa-salah-377213/regions/asia-east1/subnetworks/managment",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "managment",
            "network": "https://www.googleapis.com/compute/v1/projects/mostafa-salah-377213/global/networks/vpc-network",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "mostafa-salah-377213",
            "purpose": "PRIVATE",
            "region": "asia-east1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "192.168.10.0/24",
                "range_name": "tf-test-secondary-range-update1"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/mostafa-salah-377213/regions/asia-east1/subnetworks/managment",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "restricted",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-02-18T07:13:31.760-08:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/mostafa-salah-377213/regions/asia-east1/subnetworks/restricted",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "restricted",
            "network": "https://www.googleapis.com/compute/v1/projects/mostafa-salah-377213/global/networks/vpc-network",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "mostafa-salah-377213",
            "purpose": "PRIVATE",
            "region": "asia-east1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "192.168.20.0/24",
                "range_name": "tf-test-secondary-range-update1"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/mostafa-salah-377213/regions/asia-east1/subnetworks/restricted",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}